--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
     <style name="Theme.MCPSample" parent="android:Theme.Material.Light.NoActionBar" />
+
+    <!-- parent : androidx.compose.material3.R.style.EdgeToEdgeFloatingDialogWindowTheme -->
+    <style name="BottomSheetContainerDialogTheme" parent="EdgeToEdgeFloatingDialogWindowTheme" />
 </resources>
